@@ -8,7 +8,7 @@
         <setting id="showfanart" type="bool" label="100034" default="false" />
 	</category>
     <category label="100033">
-        <setting id="location" type="labelenum" label="100025" values="Auto|Asia|Europe|North America - Central|North America - East|North America - East Canada|North America - West" default="Auto" />
+        <setting id="location" type="labelenum" label="100025" values="Auto|Asia|Australia|Europe|North America - Central|North America - East|North America - East Canada|North America - West" default="Auto" />
         <setting id="resolution" type="labelenum" label="100031" values="All|HD Only|SD Only" default="All" />
         <setting id="flash" type="bool" label="100017" default="true" />
         <setting id="truelive" type="bool" label="100026" default="true" />
